# triangle-abstract-machine

./: Cargo.toml  README.md  rustfmt.toml
common/: Cargo.toml
tam/: Cargo.toml  README.md
tam/src/: errors.rs  instruction.rs  machine.rs  main.rs
tasc/: Cargo.toml  README.md
tasc/examples/: fac  fac.tasm  gcd.tasm  hyp.tasm
tasc/src/: codegen.rs  main.rs  tasm.lalrpop
tasc/tests/: gcd  gcd.tasm  hyp  hyp.tasm
