[package]
name = "tam"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-int = "1.2.7"
byteorder.workspace = true
clap.workspace = true

[dev-dependencies]
rstest.workspace = true
