[package]
name = "tam"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
byteorder.workspace = true
clap.workspace = true
common = {path = "../common/"}

[dev-dependencies]
rstest.workspace = true
