[package]
name = "tasc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
byteorder.workspace = true
clap.workspace = true
common = {path = "../common"}
lalrpop-util = {version = "0.20.2", features = ["lexer", "unicode"]}

[build-dependencies]
lalrpop = "0.20.2"
